my first commit

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,12 +1,12 @@
 // COLORS
-$primary-color: #2a5e80;
-$secondary-color: #5c1e63;
+$primary-color: #b9bbbd;
+$secondary-color: #304021;
 
 $white-color: #fff;
 
 $dark-grey: #333333;
 
-$dark-blue-text: #272341; // For Headings
+$dark-blue-text: #304021; // For Headings
 
 // FONT SIZE
 $default-font-size: 1.8rem;
