--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -51,11 +51,9 @@ a:hover {
 }
 
 .text-color-main {
-  background-image: linear-gradient(
-    135deg,
-    $primary-color 0%,
-    $secondary-color 100%
-  );
+  background-image: linear-gradient(90deg, #4E5925
+  0%, #242621 100%);
+  // text-shadow: 0.5px 0.5px;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 
