--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -14,7 +14,7 @@
   right: 0;
   z-index: -1;
 
-  background: url("https://images.unsplash.com/photo-1482062364825-616fd23b8fc1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80") no-repeat center center fixed;
+  background: url("https://images.unsplash.com/photo-1507325670434-aa8da9a9626c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=913&q=80") no-repeat center center fixed;
   background-position: center;
   background-size: cover; 
   -webkit-background-size: cover;
@@ -26,10 +26,11 @@
   }
 
   .hero-title {
-    font-size: 6rem;
+    font-size: 4rem;
     font-weight: 700;
     margin-bottom: 2rem;
     text-align: center;
+    color: #242621;
 
     @include respond(tab-land) {
       font-size: 4.5rem;
@@ -48,10 +49,11 @@
   }
 
   .hero-sub {
-    font-size: 5rem;
+    font-size: 4rem;
     font-weight: 600;
     margin-bottom: 4rem;
     text-align: center;
+    color: #242621;
 
     @include respond(tab-land) {
       font-size: 4rem;
